# jqktrader

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml
.github/workflows/: publish.yml
jqktrader/: __init__.py  api.py  clienttrader.py  grid_strategies.py  log.py  pop_dialog_handler.py  refresh_strategies.py
jqktrader/utils/: captcha.py  perf.py  win_gui.py
